Fixed runtime inheritance error.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
         "target": "es5",
         "declaration": false,
         "sourceMap": true,
+        "inlineSourceMap": true,
+        "inlineSources": true,
         "sourceRoot": "src",
         "experimentalDecorators": true,
         "outFile": "site/js/app.js"
