--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,12 @@
 	"problemMatcher": "$tsc"
 }
 
+
+//TODO: figure out how to make a task out of this:
+//browserify src\deps-init.js -o dist\deps-bundle.js
+
+
+
 // A task runner that calls the Typescript compiler (tsc) and
 // compiles based on a tsconfig.json file that is present in
 // the root of the folder open in VSCode
