--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "description": "word-art",
   "main": "dist/main.js",
   "dependencies": {
+    "inversify": "^1.3.1",
     "lodash": "^4.3.0",
+    "opentype": "^0.1.2",
+    "paper": "^0.9.25",
     "postal": "^1.0.8",
-    "rx": "^4.0.7",
+    "react": "0.14.6",
+    "react-dom": "0.14.6",
+    "react-redux": "4.0.0",
+    "redux": "3.0.4",
+    "redux-actions": "0.8.0",
+    "rx": "^4.0.8",
     "rxmq": "^0.9.1",
+    "seamless-immutable": "^5.0.1",
     "snabbdom": "^0.3.2"
   },
   "devDependencies": {},
