--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,14 +18,15 @@
 	"isShellCommand": true,
 
 	// Show the output window only if unrecognized errors occur.
-	"showOutput": "silent",
+	"showOutput": "always",
 
 	// args is the HelloWorld program to compile.
 	"args": [""],
-
+    
 	// use the standard tsc problem matcher to find compile problems
 	// in the output.
 	"problemMatcher": "$tsc"
+    
 }
 
 
