--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "postal": "^1.0.8",
     "react": "0.14.6",
     "react-dom": "0.14.6",
+    "react-global": "^0.1.8",
     "react-redux": "4.0.0",
+    "react-select": "^0.9.1",
     "redux": "3.0.4",
     "redux-actions": "0.8.0",
     "rx": "^4.0.8",
