--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "word-art",
   "main": "dist/main.js",
   "dependencies": {
+    "express": "^4.13.4",
     "hyperscript-helpers": "^2.1.0",
     "inversify": "^1.3.1",
     "lodash": "^4.3.0",
@@ -25,7 +26,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "bundle-client": "browserify client/deps-init.js -o site/lib/client-deps.js"
+    "bundle-client": "browserify client/deps-init.js -o site/lib/client-deps.js",
+    "start": "http-server site -p 7701"
   },
   "repository": {
     "type": "git",
