fiddles are automatically saved to endpoint

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-select": "^0.9.1",
     "redux": "3.0.4",
     "redux-actions": "0.8.0",
+    "router5": "^3.0.0",
+    "router5-history": "^3.0.0",
+    "router5-listeners": "^3.0.0",
     "rx": "^4.0.8",
     "rxmq": "^0.9.1",
     "seamless-immutable": "^5.0.1",
