--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/main.js",
   "dependencies": {
     "aws-sdk": "^2.2.42",
+    "bootstrap-select": "^1.10.0",
     "express": "^4.13.4",
     "hyperscript-helpers": "^2.1.0",
     "inversify": "^1.3.1",
