--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.13.4",
     "hyperscript-helpers": "^2.1.0",
     "inversify": "^1.3.1",
+    "js-cookie": "^2.1.0",
     "lodash": "^4.3.0",
     "opentype": "^0.1.2",
     "paper": "^0.9.25",
