--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/main.js",
   "dependencies": {
     "aws-sdk": "^2.2.42",
+    "body-parser": "^1.15.0",
     "bootstrap-select": "^1.10.0",
     "express": "^4.13.4",
     "hyperscript-helpers": "^2.1.0",
@@ -28,6 +29,7 @@
     "rxmq": "^0.9.1",
     "seamless-immutable": "^5.0.1",
     "snabbdom": "^0.3.2",
+    "stacktrace-js": "^1.0.4",
     "webfontloader": "^1.6.22"
   },
   "devDependencies": {},
