--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "word-art",
+  "name": "fiddlesticks",
   "version": "1.0.0",
-  "description": "word-art",
+  "description": "fiddlesticks",
   "main": "dist/main.js",
   "dependencies": {
     "aws-sdk": "^2.2.42",
@@ -15,11 +15,6 @@
     "opentype": "^0.1.2",
     "paper": "^0.9.25",
     "postal": "^1.0.8",
-    "react": "0.14.6",
-    "react-dom": "0.14.6",
-    "react-global": "^0.1.8",
-    "react-redux": "4.0.0",
-    "react-select": "^0.9.1",
     "redux": "3.0.4",
     "redux-actions": "0.8.0",
     "router5": "^3.0.0",
