--- a/package.json
+++ b/package.json
@@ -2,27 +2,21 @@
   "name": "fiddlesticks",
   "version": "1.0.0",
   "description": "fiddlesticks",
-  "main": "dist/main.js",
+  "main": "site/lib/main.js",
   "dependencies": {
     "aws-sdk": "^2.2.42",
     "body-parser": "^1.15.0",
     "bootstrap-select": "^1.10.0",
     "express": "^4.13.4",
-    "hyperscript-helpers": "^2.1.0",
-    "inversify": "^1.3.1",
     "js-cookie": "^2.1.0",
     "lodash": "^4.3.0",
     "opentype": "^0.1.2",
     "paper": "^0.9.25",
-    "postal": "^1.0.8",
-    "redux": "3.0.4",
-    "redux-actions": "0.8.0",
     "router5": "^3.0.0",
     "router5-history": "^3.0.0",
     "router5-listeners": "^3.0.0",
     "rx": "^4.0.8",
     "rxmq": "^0.9.1",
-    "seamless-immutable": "^5.0.1",
     "snabbdom": "^0.3.2",
     "stacktrace-js": "^1.0.4",
     "webfontloader": "^1.6.22"
@@ -30,16 +24,17 @@
   "devDependencies": {},
   "scripts": {
     "bundle-client": "browserify client/deps-init.js -o site/lib/client-deps.js",
+    "compile-content": "kramdown -i markdown -o html < site\\content\\help.md > site\\content\\help.html",
     "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryascl/word-art.git"
+    "url": "git+https://github.com/ryascl/fiddlesticks.io.git"
   },
   "author": "Ryan Smith",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/ryascl/word-art/issues"
+    "url": "https://github.com/ryascl/fiddlesticks.io/issues"
   },
-  "homepage": "https://github.com/ryascl/word-art#readme"
+  "homepage": "https://github.com/ryascl/fiddlesticks.io#readme"
 }
