--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
 	"version": "0.1.0",
 
 	// The command is tsc. Assumes that tsc has been installed using npm install -g typescript
-	"command": "tsc",
+	"command": "npm",
 
 	// The command is a shell script
 	"isShellCommand": true,
@@ -21,7 +21,7 @@
 	"showOutput": "always",
 
 	// args is the HelloWorld program to compile.
-	"args": ["-p", "client"],
+	"args": ["run", "compile-ts"],
     
 	// use the standard tsc problem matcher to find compile problems
 	// in the output.
