--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "compile-ts": "tsc -d -p ./font-shape && tsc -p ./client && copy .\\font-shape\\dist\\index.js .\\site\\lib\\font-shape.js",
     "bundle-client": "browserify client/deps-init.js -o site/lib/client-deps.js",
     "compile-content": "kramdown -i markdown -o html < site\\content\\help.md > site\\content\\help.html",
     "start": "node server/index.js"
