--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "description": "fiddlesticks",
   "main": "",
   "dependencies": {
-    "aws-sdk": "^2.2.42",
-    "body-parser": "^1.15.0",
-    "bootstrap-select": "^1.10.0",
-    "express": "^4.13.4",
-    "js-cookie": "^2.1.0",
-    "lodash": "^4.3.0",
-    "opentype": "^0.1.2",
-    "paper": "^0.9.25",
-    "router5": "^3.0.0",
-    "router5-history": "^3.0.0",
-    "router5-listeners": "^3.0.0",
-    "rx": "^4.0.8",
-    "rxmq": "^0.9.1",
-    "snabbdom": "^0.3.2",
-    "stacktrace-js": "^1.0.4",
-    "webfontloader": "^1.6.22"
+    "aws-sdk": "2.2.42",
+    "body-parser": "1.15.0",
+    "bootstrap-select": "1.10.0",
+    "express": "4.13.4",
+    "js-cookie": "2.1.0",
+    "lodash": "4.3.0",
+    "opentype": "0.1.2",
+    "paper": "0.9.25",
+    "router5": "3.0.0",
+    "router5-history": "3.0.0",
+    "router5-listeners": "3.0.0",
+    "rx": "4.0.8",
+    "rxmq": "0.9.1",
+    "snabbdom": "0.3.2",
+    "stacktrace-js": "1.0.4",
+    "webfontloader": "1.6.22"
   },
   "devDependencies": {},
   "scripts": {
@@ -33,7 +33,7 @@
     "url": "git+https://github.com/ryascl/fiddlesticks.io.git"
   },
   "author": "Ryan Smith",
-  "license": "UNLICENSED",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/ryascl/fiddlesticks.io/issues"
   },
