--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "fiddlesticks",
   "main": "",
   "dependencies": {
-    "aws-sdk": "2.2.42",
-    "body-parser": "1.15.0",
+    "aws-sdk": "^2.914.0",
+    "body-parser": "^1.19.0",
     "bootstrap-select": "1.13.6",
-    "express": "4.13.4",
+    "express": "^4.17.1",
     "js-cookie": "2.1.0",
     "lodash": "4.17.21",
     "opentype": "0.1.2",
-    "paper": "0.9.25",
+    "paper": "^0.12.15",
     "router5": "3.0.0",
     "router5-history": "3.0.0",
     "router5-listeners": "3.0.0",
@@ -21,7 +21,6 @@
     "stacktrace-js": "1.0.4",
     "webfontloader": "1.6.22"
   },
-  "devDependencies": {},
   "scripts": {
     "compile-ts": "tsc -d -p ./font-shape && tsc -p ./client && tsc -p ./server && cp font-shape/dist/index.js site/lib/font-shape.js",
     "bundle-client": "browserify client/deps-init.js -o site/lib/client-deps.js",
