Compile errors, cleanup

--- a/packages/fstx-common/package.json
+++ b/packages/fstx-common/package.json
@@ -4,6 +4,9 @@
   "main": "src/index.ts",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "compile": "tsc --project tsconfig.json"
+  },
   "dependencies": {
     "lodash": "^4.17.21",
     "paper": "^0.12.15",
