--- a/packages/font-shape/package.json
+++ b/packages/font-shape/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wavy-words",
+  "name": "font-shape",
   "version": "1.0.0",
   "main": "src/index.ts",
   "license": "MIT",
@@ -7,11 +7,14 @@
   "scripts": {
     "compile": "tsc --project tsconfig.json"
   },
+  "devDependencies": {
+    "@types/opentype": "^0.0.4",
+    "typescript": "^4.3.2"
+  },
   "dependencies": {
-    "file-saver": "^2.0.5",
-    "lodash": "^4.17.21",
+    "opentype": "^0.1.2",
     "paper": "^0.12.15",
-    "rxjs": "^7.1.0",
-    "snabbdom": "^3.0.2"
+    "underscore": "^1.13.1",
+    "webfontloader": "^1.6.28"
   }
 }
