Wavy-words running  * Does not render on first load

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "include": ["*/src/**/*"],
   "compilerOptions": {
-    "target": "ES5",
+    "target": "es6",
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "noEmit": true,
