--- a/packages/font-shape/package.json
+++ b/packages/font-shape/package.json
@@ -8,13 +8,14 @@
     "compile": "tsc --project tsconfig.json"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "@types/opentype": "^0.0.4",
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "opentype": "^0.1.2",
+    "lodash": "^4.17.21",
+    "opentype.js": "^1.3.3",
     "paper": "^0.12.15",
-    "underscore": "^1.13.1",
     "webfontloader": "^1.6.28"
   }
 }
