--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -2,9 +2,10 @@
   "include": ["*/src/**/*"],
   "compilerOptions": {
     "target": "es6",
+    "lib": ["es5", "es6", "dom"],
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "noEmit": true,
-    "lib": ["es5", "es6", "dom"]
+    "resolveJsonModule": true
   }
 }
