Ready to try Github hosting

--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,9 @@
 {
   "name": "Fiddlesticks",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "parcel build public/wavy-words.html --no-content-hash --dist-dir ../site",
+    "build": "parcel build public/index.html public/wavy-words.html --no-content-hash --dist-dir ../site",
     "start": "parcel serve public/wavy-words.html"
   },
   "devDependencies": {
