--- a/packages/wavy-words/package.json
+++ b/packages/wavy-words/package.json
@@ -12,11 +12,11 @@
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "paper": "^0.12.15",
-    "parcel": "^2.0.0-beta.3.1",
     "rxjs": "^7.1.0",
     "snabbdom": "^3.0.2"
   },
   "devDependencies": {
-    "esbuild": "^0.12.5"
+    "esbuild": "^0.12.5",
+    "parcel": "^2.0.0-beta.3.1"
   }
 }
