Bring in React and fix TS cast errors

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "noEmit": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "jsx": "react"
   }
 }
