--- a/packages/type-sketcher/package.json
+++ b/packages/type-sketcher/package.json
@@ -14,12 +14,16 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "paper": "^0.12.15",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rxjs": "^7.1.0",
     "snabbdom": "^3.0.2",
     "spectrum-colorpicker": "^1.8.1"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.5",
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
     "parcel": "^2.0.0-beta.3.1"
   }
 }
