--- a/packages/type-sketcher/package.json
+++ b/packages/type-sketcher/package.json
@@ -9,10 +9,15 @@
     "start": "parcel serve public/index.html"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "file-saver": "^2.0.5",
+    "framer-motion": "^4",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
+    "observable-hooks": "^4.0.3",
     "paper": "^0.12.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
