--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["*/src/**/*"],
   "compilerOptions": {
     "target": "es6",
-    "lib": ["es5", "es6", "dom"],
+    "lib": ["es5", "es6", "es2019", "dom"],
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "noEmit": true,
