--- a/packages/type-sketcher/package.json
+++ b/packages/type-sketcher/package.json
@@ -17,9 +17,9 @@
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
-    "observable-hooks": "^4.0.3",
     "paper": "^0.12.15",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "rxjs": "^7.1.0",
     "snabbdom": "^3.0.2",
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/jquery": "^3.5.5",
     "@types/react": "^17.0.9",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.6",
     "parcel": "^2.0.0-beta.3.1"
   }
