--- a/packages/type-sketcher/package.json
+++ b/packages/type-sketcher/package.json
@@ -9,6 +9,7 @@
     "start": "parcel serve public/index.html"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
