--- a/packages/type-sketcher/package.json
+++ b/packages/type-sketcher/package.json
@@ -13,7 +13,9 @@
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@samuelmeuli/font-manager": "^1.4.0",
     "file-saver": "^2.0.5",
+    "font-picker-react": "^3.5.2",
     "framer-motion": "^4",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
