--- a/packages/type-sketcher/package.json
+++ b/packages/type-sketcher/package.json
@@ -1,12 +1,12 @@
 {
   "name": "type-sketcher",
   "version": "1.0.0",
-  "main": "src/browser.ts",
   "license": "MIT",
   "private": true,
   "scripts": {
     "compile": "tsc --project tsconfig.json",
-    "start": "parcel serve public/index.html"
+    "start": "parcel serve public/index.html",
+    "build": "rm ../../docs/type-sketcher/* ; parcel build public/index.html --no-content-hash --no-scope-hoist --public-url ./ --dist-dir ../../docs/type-sketcher"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
@@ -33,6 +33,7 @@
     "@types/react": "^17.0.9",
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.6",
-    "parcel": "^2.0.0-beta.3.1"
+    "parcel": "^2.0.0-beta.3.1",
+    "typescript": "^4.3.2"
   }
 }
