Common build, docs

--- a/packages/package.json
+++ b/packages/package.json
@@ -4,7 +4,8 @@
     "*"
   ],
   "scripts": {
-    "compile": "tsc --project tsconfig.json"
+    "compile": "tsc --project tsconfig.json",
+    "build-all": "yarn workspace type-sketcher build; yarn workspace wavy-words build"
   },
   "devDependencies": {
     "typescript": "^4.3.2"
