--- a/packages/wavy-words/package.json
+++ b/packages/wavy-words/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "compile": "tsc --project tsconfig.json",
-    "start": "parcel serve public/index.html",
+    "start": "parcel serve public/index.html -p 8060",
     "build": "rm ../../docs/wavy-words/* ; parcel build public/index.html --no-content-hash --public-url ./ --dist-dir ../../docs/wavy-words"
   },
   "dependencies": {
